# rusty_dumb_tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: gh-pages-deploy.yml
demos/text_based_calculator/: Cargo.toml  README.md
demos/text_based_calculator/src/: calculator.rs  main.rs
demos/web_based_calculator/: Cargo.toml  README.md  index.html
demos/web_based_calculator/src/: main.rs
src/: arg.rs  calc.rs  calculator.rs  debug.rs  demo.rs  json.rs  lblscreen.rs  lib.rs  ltemp.rs  main.rs  progress.rs  shared.rs
src/demo/: demo_arg.rs  demo_calc.rs  demo_calc_gui.rs  demo_calculator.rs  demo_calculator_gui.rs  demo_json.rs  demo_lblscreen.rs  demo_ltemp.rs  demo_progress.rs  mod.rs  test.rs  test_arg.rs  test_arg_sap.rs  test_calc.rs  test_calculator.rs  test_json.rs  test_lblscreen.rs  test_ltemp.rs  test_progress.rs
