[package]
name = "rusty_dumb_tools"
version = "0.1.4"
edition = "2021"
description = "A collection of simply tools Rust modules."
repository = "https://github.com/trevorwslee/rusty_dumb_tools"
license = "MIT"
#keywords = ["arg_parser", "calc_processor"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [".vscode", ".ignore"]


[dependencies]
crossterm = "0.19.0"
#iced = "0.10"
#iced = {version="0.10",features=["canvas", "tokio", "debug"]}
#time = { version = "0.3", features = ["local-offset"] }