[package]
name = "rusty_dumb_tools"
version = "0.1.10"
edition = "2021"
description = "A collection of simply tools Rust modules."
repository = "https://github.com/trevorwslee/rusty_dumb_tools"
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [".vscode", ".ignore", "personal"]



[dependencies]
unicode-segmentation = "1.11.0"
